--- a/public/html/schedule.html
+++ b/public/html/schedule.html
@@ -51,10 +51,14 @@
                 <input class="form-check-input" type="radio" name="type" id="work" value="work">
                 <label class="form-check-label" for="work">work</label>
               </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="type" id="etc" value="etc">
+                <label class="form-check-label" for="etc">etc</label>
+              </div>
             </div>
         </div>
         <div class="col-auto position-relative mt-5">
-            <button type="submit" class="btn btn-primary position-absolute" style="left:50%; top:50%; transform:translate(-50%,-50%)">Submit</button>
+            <button type="submit" class="btn btn-primary position-absolute" style="left:50%; top:50%; transform:translate(-50%,-50%)" id="submitBtn">Submit</button>
         </div>
     </form>
 
