--- a/public/html/login.html
+++ b/public/html/login.html
@@ -14,55 +14,11 @@
 </head>
 
 <body>
-    <form method="POST" action="/schedule"
+    <form method="POST" action="/login"
     class="gy-2 gx-3 w-25 position-fixed" style="top: 50%; left:50% ; transform: translate(-50%,-50%); box-shadow: 5px 5px 5px #ccc; padding:50px 50px">
-        <h3>Create Schedule</h3>
-        <div class="col-auto">
-            <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" name="title">
-        </div>
-        <div class="col-auto mt-5">
-            <label for="content">Content</label>
-            <textarea class="form-control" placeholder="Leave a comment here" id="content" cols="100" style="height: 100px"></textarea>
-        </div>
-        <label for="timeLine" class="mt-2">time line</label>
-        <div id="timeLine" class="col-auto d-flex">
-            <select name="from" class="form-select time">
-            </select>
-              <div>~</div>
-              <select name="to" class="form-select time">
-              </select>
-        </div>
-        <label for="type" class="mt-5">type of schedule</label>
-        <div class="col-auto" id="type">
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="type" id="exercise" value="exercise">
-                <label class="form-check-label" for="exercise">exercise</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="type" id="study" value="study">
-                <label class="form-check-label" for="study">study</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="type" id="vacation" value="vacation">
-                <label class="form-check-label" for="vacation">vacation</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="type" id="work" value="work">
-                <label class="form-check-label" for="work">work</label>
-              </div>
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="type" id="etc" value="etc">
-                <label class="form-check-label" for="etc">etc</label>
-              </div>
-            </div>
-        </div>
-        <div class="col-auto position-relative mt-5">
-            <button type="submit" class="btn btn-primary position-absolute" style="left:50%; top:50%; transform:translate(-50%,-50%)" id="submitBtn">Submit</button>
-        </div>
+      <input type="email" id="email" name="email">
+      <input type="password" id="password" name="password">
     </form>
-
-    <script src="../js/schedule.js"></script>
 </body>
 
 </html>
