--- a/public/html/login.html
+++ b/public/html/login.html
@@ -14,10 +14,13 @@
 </head>
 
 <body>
-    <form method="POST" action="/login"
+    <form method="POST" action="/auth/login"
     class="gy-2 gx-3 w-25 position-fixed" style="top: 50%; left:50% ; transform: translate(-50%,-50%); box-shadow: 5px 5px 5px #ccc; padding:50px 50px">
+    <label for="email">Email</label>
       <input type="email" id="email" name="email">
+      <label for="password">password</label>
       <input type="password" id="password" name="password">
+        <button>submit</button>
     </form>
 </body>
 
