--- a/test/client/registration/test_register.html
+++ b/test/client/registration/test_register.html
@@ -13,7 +13,7 @@
 
     <script src="https://unpkg.com/chai/chai.js"></script>
     <script src="https://unpkg.com/mocha/mocha.js"></script>
-    <div id="test">
+    <div style="display: none;"id="test">
     </div>
     <script class="mocha-init">
       mocha.setup('bdd');
